scripts/nullness/annotator/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8.txt
../annotator/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/InterpreterVisitor.java:11: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/InterpreterVisitor.java:64: error: cannot find symbol
  @Initializer public void visit(Program n)
   ^
  symbol:   class Initializer
  location: class InterpreterVisitor
2 errors
